arregle basicamente todo, gpt me da mas problemas

--- a/index.html
+++ b/index.html
@@ -3,36 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>zexter27 browser</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <div class="terminal">
-    <span class="prompt">&gt;</span>
-    <div class="input-wrap">
-      <input id="search" autofocus autocomplete="off" />
-      <div class="suggestions" id="suggestions"></div>
-    </div>
-  </div>
-
-  <div id="weather">cargando clima…</div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>seb_ass browser</title>
 
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
 
-  <!-- panel lateral -->
+  <!-- Panel lateral -->
   <nav id="side-panel">
     <a href="https://web.whatsapp.com" target="_blank"><i class='bx bxl-whatsapp'></i></a>
     <a href="https://instagram.com" target="_blank"><i class='bx bxl-instagram'></i></a>
@@ -40,7 +17,7 @@
     <a href="https://twitter.com" target="_blank"><i class='bx bxl-twitter'></i></a>
   </nav>
 
-  <!-- terminal -->
+  <!-- Terminal + saludo -->
   <div class="terminal-wrapper">
 
     <div id="welcome">
@@ -62,7 +39,7 @@
 
   </div>
 
-  <!-- clima -->
+  <!-- Clima -->
   <div id="weather">cargando clima…</div>
 
   <script src="script.js"></script>
